--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=demo
 spring.datasource.username=Gleb
 spring.datasource.password=Gleb01012003
-spring.datasource.url=jdbc:postgresql://localhost:5432/DocsApp
+spring.datasource.url=jdbc:postgresql://postgres:5432/DocsApp
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
